feat(vote): allow vote in multiple answers
